Updated to use roomcodes instead of GS names for joining
