# gameserver/src/main/java/dev/totallyspies/spydle/gameserver/storage/CurrentGameServerConfiguration.java
@@ -1,6 +1,7 @@
 package dev.totallyspies.spydle.gameserver.storage;
 
 import dev.totallyspies.spydle.gameserver.agones.AgonesHook;
+import dev.totallyspies.spydle.shared.RoomCodeGenerator;
 import dev.totallyspies.spydle.shared.model.GameServer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -36,12 +37,14 @@ public class CurrentGameServerConfiguration {
     @ConditionalOnProperty(name = "agones.enabled", havingValue = "false")
     public GameServer currentLocalGameServer(@Value("${server.port}") int containerPort) {
         logger.info("Agones disabled, loading local current game server info...");
+        String roomCode = RoomCodeGenerator.generateRandomCode();
+        String gameServerName = "gameserver-local-" + roomCode;
         return writeCurrentGameServer(GameServer.builder()
                 .address("localhost")
                 .port(containerPort)
-                .name("gameserver-local")
-                .roomId("12345") // TODO
-                .publicRoom(false) // TODO
+                .name(gameServerName)
+                .roomCode(roomCode)
+                .publicRoom(false)
                 .state(GameServer.State.WAITING)
                 .build());
     }
